testing/errors/subst0.a
	*=$1000
base?			; -> "no string given"
		nop
